removed the extra unnecessary hashing
