# backend/helper/fileHandler/googleFileStorage.ts
@@ -18,7 +18,7 @@ export class googleFileStorage implements fileStorage {
     if (c === null) {
       return undefined;
     }
-    const buffer = await this.getFile(c.url);
+    const buffer = await this.getFile(c.fileName);
     return buffer;
   };
 
